--- a/index.html
+++ b/index.html
@@ -171,10 +171,17 @@
                     </div>
                     <div class="right-div">
                         <p>
-                            Present Address: Orivedenkatu 5 D 609, 33720 Tampere, Finland <br>
-                            Sex: Male <br>
-                            Date of Birth: 12/03/1990 <br>
-                            Nationality: Bangladeshi
+                            Full Name: Rubel Chowdhury  <br>
+                            Father's Name: Uttam Chowdhury  <br>
+                            Mother'Name: Puspo Rani Chowdhury  <br>
+                            Present Address: House No# 152, Vill- Shemra, P.O- Chandura, P.O- Bijoynagar, Dist- Brahmanbaria. <br>
+                            Permanent Address: House No# 152, Vill- Shemra, P.O- Chandura, P.O- Bijoynagar, Dist- Brahmanbaria. <br>
+                            Date of Birth: 05/06/1996 <br>
+                            Marital Status: Unmarried <br>
+                            Religion: Hindu <br>
+                            Nationality: Bangladeshi <br>
+                            Gender: Male <br>
+                            National ID:
                         
                         </p>
                     </div>
