--- a/index.html
+++ b/index.html
@@ -273,9 +273,10 @@
                     <div class="right-div">
                        
                         <ul>
-                            <li>Excellent Managerial skills gained by arranging programming contest at university</li>
-                            <li>Outstanding communication skills achieved through my experience as lecturer at three
-                                different institutions</li>
+                            <li>Capability or organizing and leading a group.</li>
+                            <li>Ability to work independently as well as group.</li>
+                            <li>Ability to accomplish assignment and business related reports within deadline.</li>
+                            <li>Capability of communicating with people effectively and smoothly.</li>
                         </ul>                       
                         
                     </div>
