--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@
             <img class="profile-image" src="images/anisul_islam.jpg" alt="anisul_islam">
 
             <div class="header-bio">
-                <h1>Anisul Islam</h1>
-                <h3>Web designer & YouTuber</h3>
+                <h1>Rubel Chowdhury</h1>
+                <h3></h3>
             </div>
 
            <div class="header-contact">
-                <p>&#128231; <a href="mailto:anisul2010s@yahoo.co.uk" target="blank">anisul2010s@yahoo.co.uk </a></p>
-                <p>&#127760; <a href="https://www.studywithanis.com" target="blank">www.studywithanis.com</a></p>
-                <p>&#128222; <a href="tel:+358466150008" target="blank">+62-896-7062-55135</a></p>
+                <p>&#128231; <a href="mailto:rubelchowdhury500@gmail.com" target="blank">rubelchowdhury500@gmail.com </a></p>
+                <p>&#127760; <a href="#" target="blank"></a></p>
+                <p>&#128222; <a href="tel:+8801774523241" target="blank">+8801774523241</a></p>
            </div>
 
         </header>
