--- a/index.html
+++ b/index.html
@@ -341,11 +341,12 @@
             <section id="ielts-section">
                 <div class="content">
                     <div class="left-div">
-                        <h3>IELTS SCORE</h3>
+                        <h3>Language Proficlency</h3>
                     </div>
                     <div class="right-div">
                         <ul>
-                            <li> <strong>IELTS 7 (Speaking-8.5, Listening-8, Writing-6, Reading-6)</strong> </li>
+                            <li> <strong>Bangla (Speaking, Listening, Writing, Reading</strong> </li>
+                            <li> <strong>English (Speaking, Listening, Writing, Reading</strong> </li>
                         </ul>                   
                         
                     </div>
