--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
         <!-- header start  -->
         <header> 
-            <img class="profile-image" src="images/anisul_islam.jpg" alt="anisul_islam">
+            <img class="profile-image" src="images/anisul_islam.jpg" alt="Rubel-Chowdhury">
 
             <div class="header-bio">
                 <h1>Rubel Chowdhury</h1>
@@ -174,8 +174,8 @@
                             Full Name: Rubel Chowdhury  <br>
                             Father's Name: Uttam Chowdhury  <br>
                             Mother'Name: Puspo Rani Chowdhury  <br>
-                            Present Address: House No# 152, Vill- Shemra, P.O- Chandura, P.O- Bijoynagar, Dist- Brahmanbaria. <br>
-                            Permanent Address: House No# 152, Vill- Shemra, P.O- Chandura, P.O- Bijoynagar, Dist- Brahmanbaria. <br>
+                            Present Address: Vill- Shemra, P.O- Chandura, P.O- Bijoynagar, Dist- Brahmanbaria. <br>
+                            Permanent Address: Vill- Shemra, P.O- Chandura, P.O- Bijoynagar, Dist- Brahmanbaria. <br>
                             Date of Birth: 05/06/1996 <br>
                             Marital Status: Unmarried <br>
                             Religion: Hindu <br>
