--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
         <!-- header start  -->
         <header> 
-            <img class="profile-image" src="images/anisul_islam.jpg" alt="Rubel-Chowdhury">
+            <img class="profile-image" src="Rubel-Chowdhury.jpg" alt="Rubel-Chowdhury">
 
             <div class="header-bio">
                 <h1>Rubel Chowdhury</h1>
