--- a/index.html
+++ b/index.html
@@ -107,10 +107,12 @@
             .edu-template-left{
                 float: left;
                 width: 50%;
+                height:70%;
             }
             .edu-template-right{
                 float: right;
                 width: 50%;
+                height:70%;
             }
 
             .bottom-container{
