--- a/index.html
+++ b/index.html
@@ -352,7 +352,9 @@
             <hr class="common-hr">
 
             
-            <!-- Communication Skills section starts here  -->
+<!-- 
+
+Communication Skills section starts here
             <section id="communication-skills">
                 <div class="content">
                     <div class="left-div">
@@ -371,7 +373,8 @@
                 </div>
             </section>
 
-            <!-- Communication Skills section end here  -->
+            Communication Skills section end here  
+-->
 
             <div class="clear-div"></div>
             <hr class="common-hr">
