--- a/Bosel cv.html
+++ b/Bosel cv.html
@@ -153,7 +153,7 @@
 
         <!-- header start  -->
         <header> 
-            <img class="profile-image" src="Rubel-Chowdhury.jpg" alt="Rubel-Chowdhury">
+            <img class="profile-image" src="Removal-159.png" alt="Rubel-Chowdhury">
 
             <div class="header-bio">
                 <h1>Rubel Chowdhury</h1>
